--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
 
+/* css 전역변수 선언 */
 :root {
-  --default-text-size: 14px;
+  --default-text-size: 16px;
   --title-text-size: 20px;
-  --text-window-border-radius: 12px;
-  --button-border-radius: 18px;
+  --window-border-radius: 12px;
+  
   --component-margin: 12px;
-  --button-side-length: 36px;
+  
 }
 
 html {
-  font-family: 'Roboto', 'Noto Sans KR', sans-serif;
+  font-family: "Roboto", "Noto Sans KR", sans-serif;
   font-size: var(--default-text-size);
   color: rgb(15, 15, 15);
 }
@@ -22,27 +23,20 @@ html {
   margin: 0 auto;
 }
 
-.text-title {
+.window {
+  border-radius: var(--window-border-radius);
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.window-inner {
+  margin: var(--component-margin);
+}
+
+.window-inner-title {
   font-size: var(--title-text-size);
   font-weight: bold;
 }
 
-.text-window {
-  border-radius: var(--text-window-border-radius);
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-.text-window-inner {
-  margin: var(--component-margin);
-}
-
 .modifiable:hover {
   background-color: rgba(0, 0, 0, 0.1);
-}
-
-.button {
-  height: var(--button-side-length);
-  min-width: var(--button-side-length);
-  border-radius: var(--button-border-radius);
-  border-style: none;
 }
