edit Main styles

--- a/src/main/main.css
+++ b/src/main/main.css
@@ -89,7 +89,7 @@ button:hover {
 
 .bookmarks-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
   gap: 20px;
 }
 
