--- a/src/main/main.css
+++ b/src/main/main.css
@@ -90,7 +90,12 @@ button:hover {
 .bookmarks-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-  gap: 20px;
+  gap: 10px;
+
+  &>* {
+    align-self: center;
+    justify-self: center;
+  }
 }
 
 .bookmark {
