--- a/src/main/main.css
+++ b/src/main/main.css
@@ -19,6 +19,34 @@
     float: left;
   }
 
+  &>.header-bookmark-add-button-field {
+    display: flex;
+    width: 0px;
+    height: auto;
+    float: right;
+    justify-content: flex-end;
+    overflow: visible;
+
+    &>.header-bookmark-add-button {
+      display: flex;
+      align-items: center;
+      width: 150px;
+      height: 36px;
+      padding: 0;
+      font-size: 18px;
+      font-weight: bold;
+      flex-shrink: 0;
+      text-align: center;
+      justify-content: center;
+      border-radius: 18px;
+
+      &>* {
+        width: 18px;
+        height: 18px;
+      }
+    }
+  }
+
   &>.search-bar {
     display: flex;
     align-items: center;
