--- a/src/input/input.css
+++ b/src/input/input.css
@@ -47,3 +47,14 @@
   word-break: break-all;
   overflow: hidden;
 }
+
+.textarea-info {
+  box-sizing: border-box;
+  width: 100%;
+  font-size: var(--default-text-size);
+  font-family: inherit;
+  display: flex;
+  word-break: break-all;
+  overflow: hidden;
+  align-items: center;
+}
